# pyspark-data-source-driver

./: README.md  pyproject.toml
pyspark_data_source_driver/: __init__.py  examples.py  read_driver.py  stream_read_driver.py
tests/: helper.py  test_hypothesis.py  test_read.py  test_stream_read.py
