[project]
name = "pyspark-data-source-driver"
version = "0.1.0"
description = ""
authors = [
    {name = "Haoyu Weng",email = "wenghy02@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4"
dependencies = [
    "pyspark (>=4.0.0.dev2,<5.0.0)",
    "pyarrow (>=19.0.0,<20.0.0)",
    "typeguard (>=4.4.1,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pyarrow-stubs = "^17.16"

